audit(java): 5 modules — a whole file stale to JEP 491, 2 JVM flags that don't exist
Second java audit batch: generics_and_type_system, java8_features,
java9_to_21_features, java_interview_patterns, java_memory_model.
147 claims checked, 40 corrections.

java9_to_21_features WAS STALE IN ~12 PLACES AGAINST JEP 491 (Java 24):
  `synchronized` pinning was taught as current fact in the §4.4 table, the §6
  broken->fix pair, §8, §9, a war story, §11, best-practice 5, Q4, Q15, the case
  study and the discussion points. JEP 491 tracks monitor ownership against the
  virtual thread, so `synchronized`, contended acquisition and Object.wait() all
  unmount; residual pinning is native frames and class-init only.

  `-Djdk.tracePinnedThreads=full` in 5 places -- REMOVED in Java 24. JEP 491:
  "setting it on the command line will have no effect." Replaced with the
  jdk.VirtualThreadPinned JFR event.

  Q15 said Java 25 was "expected to remove the synchronized pinning
  restriction". It had already shipped a release earlier.

  `new StructuredTaskScope.ShutdownOnFailure()` / `throwIfFailed()` -- that API
  no longer exists; JEP 505 replaced the constructors with open()/open(Joiner).

  "Record patterns in instanceof (Java 21 preview)" -- false, JEP 440 finalized
  them in 21. Verified with `javac --release 21`.

TWO EFFECTIVE JAVA ITEMS WITH CORRECT NUMBERS AND INVENTED CONTENT:
  Item 25 is "Limit source files to a single top-level class", not "Prefer lists
  to arrays" (that is 28). Item 67 is "Optimize judiciously", not lazy
  initialization (that is 83). Same defect class as the previous batch's Item 18
  -- the accurate number is what makes it convincing.

FABRICATED ATTRIBUTION:
  "The JDK EventQueue was implemented with DCL... the Java community FAQ labeled
  it 'correctly broken.'" The DCL Declaration was fetched: it names NO JDK class
  (generic Foo/Helper only) and the phrase never appears. Also dropped an
  unsupported "Tomcat SessionManager" attribution on the Hash